--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="shortcut icon" href="/promocenter.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./promocenter.png" type="image/x-icon">
 
     <title>PromoCenter VIP</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -201,7 +201,7 @@
         <div class="container">
             <div class="logo-wrapper">
                 <div class="logo">
-                    <img src="/promocenter.png" alt="PromoCenter Logo">
+                    <img src="./promocenter.png" alt="PromoCenter Logo">
                 </div>
             </div>
 
