--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css" />
+
     <style>
         * {
             font-family: "Montserrat", sans-serif;
@@ -27,11 +29,13 @@
             font-family: sans-serif;
             background: #f7f7f7;
             color: #222;
-            background: rgba(0, 0, 0, 0.3) url('./fundo.png');
+            background: rgba(0, 0, 0, 0.3) url('./fundo.webp');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
             background-blend-mode: multiply;
+            min-height: 100vh;
+            position: relative;
         }
 
         .header {
@@ -102,10 +106,6 @@
             transition: background .3s;
         }
 
-        /* .buttons button:hover {
-            background: #0b70d1;
-        } */
-
         .btn-whats {
             background: #00C050;
         }
@@ -122,7 +122,7 @@
         }
 
         #contador {
-            font-size: 30px;
+            font-size: 40px;
             font-weight: 700;
         }
 
@@ -186,11 +186,59 @@
         .btn-whats:hover {
             animation-play-state: paused;
         }
+
+        .logos-lojas {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .logo-lojas {
+            width: 45px;
+            height: 45px;
+            border-radius: 50%;
+            border: 0px solid rgb(0, 0, 0);
+            background: rgb(255, 255, 255);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+        }
+
+        .logo-lojas img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+
+        /* Slider */
+        .swiper {
+            width: 100%;
+            height: 400px;
+        }
+
+        .swiper-slide {
+            text-align: center;
+            font-size: 18px;
+            background: transparent;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .swiper-slide img {
+            display: block;
+            width: 110%;
+            height: 107%;
+            object-fit: cover;
+        }
     </style>
 </head>
 
 <body>
-
     <div class="header">
         <span class="emoji">👇</span>
         Vagas gratuitas ilimitadas
@@ -205,80 +253,125 @@
                 </div>
             </div>
 
-            <div class="title">PromoCenter</div>
-
             <div class="text">
-                AS MELHORES PROMOÇÕES NÃO ESPERAM! ENTRE AGORA NO NOSSO GRUPO EXCLUSIVO.
+                Receba promoções REAIS todos os dias das melhores lojas!<br>
+
+                <div class="logos-lojas">
+                    <div class="logo-lojas">
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
+                            <img src="./shopee.png" alt="Shopee">
+                        </a>
+                    </div>
+                    <div class="logo-lojas">
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
+                            <img src="./mercadolivre.webp" alt="Mercado Livre">
+                        </a>
+                    </div>
+                    <div class="logo-lojas">
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
+                            <img src="./amazon.webp" alt="Amazon">
+                        </a>
+                    </div>
+                    <div class="logo-lojas">
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
+                            <img src="./magalu.webp" alt="Magalu">
+                        </a>
+                    </div>
+                    <div class="logo-lojas">
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
+                            <img src="./logo-netshoesV2-1.webp" alt="Netshoes">
+                        </a>
+                    </div>
+                </div>
             </div>
+
 
             <div class="buttons">
                 <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
-                    <button class="btn-whats">Participe do grupo VIP no WhatsApp</button>
+                    <button class="btn-whats">
+                        Entrar <strong>GRÁTIS</strong> no Canal de Ofertas
+                    </button>
                 </a>
-                <a href="https://t.me/promocenterofc">
+                <!-- <a href="https://t.me/promocenterofc">
                     <button class="btn-telegram">Canal do Telegram</button>
-                </a>
+                </a> -->
             </div>
 
             <div class="vagas">
-                <span id="vaga-header">Ainda Restam</span>
-                <span id="contador">20 vagas</span>
-                <span>Já somos +5 mil membros</span>
+                <!-- <span id="vaga-header">APENAS HOJE!</span> -->
+                <!-- <span id="contador">20 vagas</span> -->
+            </div>
+
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
+                            <img src="./Screenshot_20251222_182818_WhatsApp.jpg" alt="Grupo VIP PromoCenter">
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
+                            <img src="./Screenshot_20251222_182838_WhatsApp.jpg" alt="Grupo VIP PromoCenter">
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
+                            <img src="./Screenshot_20251222_182853_WhatsApp.jpg" alt="Grupo VIP PromoCenter">
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
+                            <img src="./Screenshot_20251222_182904_WhatsApp.jpg" alt="Grupo VIP PromoCenter">
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
+                            <img src="./Screenshot_20251222_182913_WhatsApp.jpg" alt="Grupo VIP PromoCenter">
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
+                            <img src="./Screenshot_20251222_182925_WhatsApp.jpg" alt="Grupo VIP PromoCenter">
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
+                            <img src="./Screenshot_20251222_182934_WhatsApp.jpg" alt="Grupo VIP PromoCenter">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
 
-    <!-- Popup de notificações -->
-    <div id="popup" class="popup"></div>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
 
     <script>
-        // Contador regressivo de vagas
-        let vagas = 20;
-
-        const contadorEl = document.getElementById('contador');
-        const contadorHeader = document.getElementById('vaga-header');
-        const interval = setInterval(() => {
-            vagas--;
-
-            if (vagas <= 1) {
-                contadorHeader.textContent = "Disponível!";
-                contadorEl.textContent = "1 Vaga";
-                clearInterval(interval);
-                return;
-            }
-
-            contadorEl.textContent = vagas + " vagas";
-        }, 2800); // diminui a cada 4 segundos
-
-        // Lista de nomes falsos
-        const nomes = [
-            "Ana Paula", "João Silva", "Carlos Mendes", "Maria Luiza", "Pedro Henrique",
-            "Fernanda Santos", "Lucas Almeida", "Juliana Rocha", "Eduarda Farias",
-            "Rafael Dias", "Camila Teixeira", "Victor Lima"
-        ];
-
-        function gerarPopup() {
-            const nome = nomes[Math.floor(Math.random() * nomes.length)];
-            const popup = document.getElementById('popup');
-
-            popup.textContent = nome + " entrou no grupo!";
-            popup.style.display = 'block';
-
-            setTimeout(() => {
-                popup.style.display = 'none';
-            }, 2000);
-        }
-
-        // Exibe popup a cada 5–10 segundos
-        function iniciarPopups() {
-            setInterval(() => {
-                gerarPopup();
-            }, 4000);
-        }
-
-        iniciarPopups();
+        var swiper = new Swiper(".mySwiper", {
+            slidesPerView: 3,
+            spaceBetween: 30,
+            // loop: true,
+            autoplay: {
+                delay: 2000,
+                disableOnInteraction: false,
+            },
+            pagination: {
+                clickable: true,
+            },
+            breakpoints: {
+                0: {
+                    slidesPerView: 1.2,
+                    spaceBetween: 20,
+                },
+                768: {
+                    slidesPerView: 2.2,
+                },
+                1024: {
+                    slidesPerView: 3.2,
+                },
+            },
+        });
     </script>
-
 </body>
 
 </html>
