--- a/index.html
+++ b/index.html
@@ -27,15 +27,34 @@
         body {
             margin: 0;
             font-family: sans-serif;
-            background: #f7f7f7;
             color: #222;
-            background: rgba(0, 0, 0, 0.3) url('./fundo.webp');
+            background: linear-gradient(-45deg,
+                    #0057ff,
+                    #0a4682,
+                    #012c7a,
+                    #0057ff);
+            background-size: 200% 200%;
+            animation: gradientMove 1s ease infinite;
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
             background-blend-mode: multiply;
             min-height: 100vh;
             position: relative;
+        }
+
+        @keyframes gradientMove {
+            0% {
+                background-position: 0% 50%;
+            }
+
+            50% {
+                background-position: 100% 50%;
+            }
+
+            100% {
+                background-position: 0% 50%;
+            }
         }
 
         .header {
@@ -115,8 +134,8 @@
         }
 
         .vagas {
-            margin-top: 25px;
-            padding: 20px;
+            margin-top: 35px;
+            /* padding: 20px; */
             color: #fff;
             font-size: 18px;
         }
@@ -161,7 +180,7 @@
         }
 
         .btn-whats {
-            background: #00C050;
+            background: #0ea34c;
             animation: pulse 1.4s infinite ease-in-out;
         }
 
@@ -192,12 +211,13 @@
             align-items: center;
             justify-content: center;
             gap: 20px;
-            margin-top: 20px;
+            margin-top: 15px;
+            margin-bottom: 15px;
         }
 
         .logo-lojas {
-            width: 45px;
-            height: 45px;
+            width: 60px;
+            height: 60px;
             border-radius: 50%;
             border: 0px solid rgb(0, 0, 0);
             background: rgb(255, 255, 255);
@@ -217,10 +237,11 @@
         /* Slider */
         .swiper {
             width: 100%;
-            height: 400px;
+            margin-top: 30px;
         }
 
         .swiper-slide {
+            height: 400px;
             text-align: center;
             font-size: 18px;
             background: transparent;
@@ -229,11 +250,21 @@
             align-items: center;
         }
 
+        @media(max-width: 500px) {
+            .swiper-slide {
+                height: 600px;
+            }
+        }
+
         .swiper-slide img {
             display: block;
             width: 110%;
-            height: 107%;
+            height: 117%;
             object-fit: cover;
+        }
+
+        .title-main span {
+            color: orange;
         }
     </style>
 </head>
@@ -254,7 +285,11 @@
             </div>
 
             <div class="text">
-                Receba promoções REAIS todos os dias das melhores lojas!<br>
+                <h2 class="title-main">
+                    🔥 Receba as <span>Melhores Ofertas</span> das <br>
+                    <span>Melhores Lojas</span> direto no celular
+                </h2>
+                <br>
 
                 <div class="logos-lojas">
                     <div class="logo-lojas">
@@ -277,11 +312,6 @@
                             <img src="./magalu.webp" alt="Magalu">
                         </a>
                     </div>
-                    <div class="logo-lojas">
-                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
-                            <img src="./logo-netshoesV2-1.webp" alt="Netshoes">
-                        </a>
-                    </div>
                 </div>
             </div>
 
@@ -289,7 +319,7 @@
             <div class="buttons">
                 <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
                     <button class="btn-whats">
-                        Entrar <strong>GRÁTIS</strong> no Canal de Ofertas
+                        👉 ENTRAR NO <strong>PROMOCENTER</strong> AGORA
                     </button>
                 </a>
                 <!-- <a href="https://t.me/promocenterofc">
@@ -298,45 +328,51 @@
             </div>
 
             <div class="vagas">
-                <!-- <span id="vaga-header">APENAS HOJE!</span> -->
-                <!-- <span id="contador">20 vagas</span> -->
+                <span id="vaga-header">
+                    <strong>⌛ Últimas vagas disponíveis hoje</strong>
+                </span>
             </div>
 
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
-                            <img src="./Screenshot_20251222_182818_WhatsApp.jpg" alt="Grupo VIP PromoCenter">
+                            <img src="./1.jpeg" alt="Grupo VIP PromoCenter">
                         </a>
                     </div>
                     <div class="swiper-slide">
                         <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
-                            <img src="./Screenshot_20251222_182838_WhatsApp.jpg" alt="Grupo VIP PromoCenter">
+                            <img src="./2.jpeg" alt="Grupo VIP PromoCenter">
                         </a>
                     </div>
                     <div class="swiper-slide">
                         <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
-                            <img src="./Screenshot_20251222_182853_WhatsApp.jpg" alt="Grupo VIP PromoCenter">
+                            <img src="./3.jpeg" alt="Grupo VIP PromoCenter">
                         </a>
                     </div>
                     <div class="swiper-slide">
                         <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
-                            <img src="./Screenshot_20251222_182904_WhatsApp.jpg" alt="Grupo VIP PromoCenter">
+                            <img src="./4.jpeg" alt="Grupo VIP PromoCenter">
                         </a>
                     </div>
                     <div class="swiper-slide">
                         <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
-                            <img src="./Screenshot_20251222_182913_WhatsApp.jpg" alt="Grupo VIP PromoCenter">
+                            <img src="./5.jpeg" alt="Grupo VIP PromoCenter">
                         </a>
                     </div>
                     <div class="swiper-slide">
                         <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
-                            <img src="./Screenshot_20251222_182925_WhatsApp.jpg" alt="Grupo VIP PromoCenter">
+                            <img src="./6.jpeg" alt="Grupo VIP PromoCenter">
                         </a>
                     </div>
                     <div class="swiper-slide">
                         <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
-                            <img src="./Screenshot_20251222_182934_WhatsApp.jpg" alt="Grupo VIP PromoCenter">
+                            <img src="./7.jpeg" alt="Grupo VIP PromoCenter">
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2">
+                            <img src="./8.jpeg" alt="Grupo VIP PromoCenter">
                         </a>
                     </div>
                 </div>
