--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '1789144685108886');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1789144685108886&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
+
     <link rel="shortcut icon" href="./promocenter.png" type="image/x-icon">
 
     <title>PromoCenter VIP</title>
@@ -375,7 +393,8 @@
                     </div>
                 </div>
                 <div style="margin-top: 15px; font-size: 13px; color: #d1d1d1;">
-                    <i class="fas fa-check"></i> Ofertas de imperdíveis • <i class="fas fa-check"></i> Lojas Oficiais • <i class="fas fa-shield-alt"></i> 100% SEGURO
+                    <i class="fas fa-check"></i> Ofertas de imperdíveis • <i class="fas fa-check"></i> Lojas Oficiais •
+                    <i class="fas fa-shield-alt"></i> 100% SEGURO
                 </div>
             </div>
 
