feat: retiro parametros link whatsapp

--- a/index.html
+++ b/index.html
@@ -374,19 +374,19 @@ src="https://www.facebook.com/tr?id=1789144685108886&ev=PageView&noscript=1"
                 </h4>
                 <div class="logos-lojas">
                     <div class="logo-lojas">
-                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2" class="action-button"
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY" class="action-button"
                             data-element="whatsapp-logos-marcas-ml" data-page="landing-promocenter">
                             <img src="./mercadolivre.webp" alt="Mercado Livre">
                         </a>
                     </div>
                     <div class="logo-lojas">
-                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2" class="action-button"
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY" class="action-button"
                             data-element="whatsapp-logos-marcas-shopee" data-page="landing-promocenter">
                             <img src="./shopee.png" alt="Shopee">
                         </a>
                     </div>
                     <div class="logo-lojas">
-                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2" class="action-button"
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY" class="action-button"
                             data-element="whatsapp-logos-marcas-amazon" data-page="landing-promocenter">
                             <img src="./amazon.webp" alt="Amazon">
                         </a>
@@ -399,7 +399,7 @@ src="https://www.facebook.com/tr?id=1789144685108886&ev=PageView&noscript=1"
             </div>
 
             <div class="buttons">
-                <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2" class="btn-whats action-button"
+                <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY" class="btn-whats action-button"
                     data-element="whatsapp-top" data-page="landing-promocenter">
                     <i class="fab fa-whatsapp"></i>
                     ENTRAR NO <strong>GRUPO DO WHATSAPP</strong>
@@ -415,43 +415,43 @@ src="https://www.facebook.com/tr?id=1789144685108886&ev=PageView&noscript=1"
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2" class="action-button"
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY" class="action-button"
                             data-element="whatsapp-slider-1" data-page="landing-promocenter">
                             <img src="./1.png" alt="Grupo VIP PromoCenter">
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2" class="action-button"
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY" class="action-button"
                             data-element="whatsapp-slider-6" data-page="landing-promocenter">
                             <img src="./6.png" alt="Grupo VIP PromoCenter">
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2" class="action-button"
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY" class="action-button"
                             data-element="whatsapp-slider-3" data-page="landing-promocenter">
                             <img src="./3.png" alt="Grupo VIP PromoCenter">
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2" class="action-button"
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY" class="action-button"
                             data-element="whatsapp-slider-4" data-page="landing-promocenter">
                             <img src="./4.png" alt="Grupo VIP PromoCenter">
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2" class="action-button"
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY" class="action-button"
                             data-element="whatsapp-slider-5" data-page="landing-promocenter">
                             <img src="./5.png" alt="Grupo VIP PromoCenter">
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2" class="action-button"
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY" class="action-button"
                             data-element="whatsapp-slider-2" data-page="landing-promocenter">
                             <img src="./2.png" alt="Grupo VIP PromoCenter">
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY?mode=hqrt2" class="action-button"
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY" class="action-button"
                             data-element="whatsapp-slider-7" data-page="landing-promocenter">
                             <img src="./7.png" alt="Grupo VIP PromoCenter">
                         </a>
